Fixed header having white space on the right on small screen

--- a/src/components/CustomTabs/CustomTabs.css
+++ b/src/components/CustomTabs/CustomTabs.css
@@ -7,7 +7,6 @@
   width: inherit;
   max-width: 400px;
   border-radius: 20px;
-  padding: 10px;
   background-color: #eeeeee;
 }
 
